<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.SignInActivity"
    android:orientation="vertical"
    android:background="@drawable/image_background_signin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_sign_in"
                    android:textColor="@color/signin_title_color"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_title_signin"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:textColor="@color/signin_title_color"
                    android:alpha="0.6"
                    android:text="@string/title_sign_in_bottom"
                    android:textSize="@dimen/text_size_title_bottom_signin"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:letterSpacing="0.1"
            android:textStyle="bold"
            android:text="@string/sign_in_email"
            android:textColor="@color/signin_title_color"
            android:textSize="@dimen/text_size_normal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/layout_textview_custom"
            android:alpha="0.7">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="20dp"
                    android:letterSpacing="0.1"
                    android:hint="@string/sign_in_email_hint"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_normal"
                    android:background="@drawable/layout_textview_custom"
                    android:textColorHint="@color/signin_textview_text_color"
                    android:id="@+id/txt_signin_email"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:letterSpacing="0.1"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/sign_in_password"
            android:textColor="@color/signin_title_color"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/layout_textview_custom"
            android:alpha="0.7">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:letterSpacing="0.1"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_normal"
                    android:background="@drawable/layout_textview_custom"
                    android:hint="@string/sign_in_password_hint"
                    android:textColorHint="@color/signin_textview_text_color"
                    android:id="@+id/txt_signin_pwd"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/sign_in_forgot_password"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:textColor="@color/signin_title_color"
            android:alpha="0.6"
            android:id="@+id/txt_signin_forgot_pwd"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/layout_button_custom"
            android:gravity="center"
            android:text="@string/sign_in_button"
            android:textAllCaps="false"

            android:letterSpacing="0.1"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/signin_button_text_color"
            android:id="@+id/btn_sign_in"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/sign_in_footer"
            android:textColor="@color/signin_footer"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            android:id="@+id/txt_signin_footer"/>
</LinearLayout>