<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.WelcomeActivity"
    android:orientation="vertical"
    android:background="@drawable/image_background_welcome">

    <!--title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textColor="@color/welcome_title_color"
            android:textSize="@dimen/text_size_title"
            android:letterSpacing="0.1"
            app:fontFamily="@font/frank_ruhl_libre_light"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="295dp"
            android:text="@string/welcome_title_dot"
            android:gravity="bottom"
            android:textColor="@color/welcome_title_color_dot"
            android:textSize="100dp"/>
        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/welcome_title_bottom"
            android:textColor="@color/welcome_title_color"
            android:textSize="@dimen/text_size_title_bottom"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center">
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/layout_button_custom"
                android:gravity="center"
                android:text="@string/welcome_button"
                android:textAllCaps="false"
                android:letterSpacing="0.1"
                android:textSize="@dimen/text_size_button"
                android:textColor="@color/welcome_button_text_color"
                android:id="@+id/btn_welcome_member"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/txt_welcome_new_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_footer"
            android:textColor="@color/welcome_footer"
            android:textSize="@dimen/text_size_footer"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            app:fontFamily="@font/frank_ruhl_libre_light" />
    </LinearLayout>
</LinearLayout>