<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <!--background-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/image_background_main" />
                </android.support.v7.widget.CardView>
            </RelativeLayout>
            <!--avatar-->
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:src="@drawable/image_main_avatar"/>
            </RelativeLayout>
            <!--title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_name"
                    android:gravity="center"
                    android:textSize="@dimen/main_text_title"
                    android:textColor="@color/main_title_color"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/main_address"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/main_title_color"/>
            </LinearLayout>
            <!--button-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="195dp"
                android:layout_gravity="center_horizontal">
                <Button
                    android:layout_width="160dp"
                    android:layout_height="35dp"
                    android:id="@+id/btn_main_follow"
                    android:text="@string/main_button_follow"
                    android:textColor="@color/main_button_text_color"
                    android:textAllCaps="false"
                    android:background="@drawable/layout_button_custom"/>
            </RelativeLayout>
            <!--data-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="260dp">
                <!--post-->
                <RelativeLayout
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/main_post_number"
                        android:textSize="28dp"
                        android:textColor="@color/main_title_color"/>

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/main_post_text"
                        android:textColor="@color/main_title_color"
                        android:alpha="0.6"
                        android:textSize="12dp" />
                </RelativeLayout>
                <!--followers-->
                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/main_followers_number"
                        android:textSize="28dp"
                        android:textColor="@color/main_title_color"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:text="@string/main_followers_text"
                        android:textColor="@color/main_title_color"
                        android:alpha="0.6"
                        android:textSize="12dp" />
                </RelativeLayout>
                <!--following-->
                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/main_following_number"
                        android:textColor="@color/main_title_color"
                        android:textSize="28dp" />

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/main_following_text"
                        android:textColor="@color/main_title_color"
                        android:alpha="0.6"
                        android:textSize="12dp" />
                </RelativeLayout>
            </LinearLayout>
        </FrameLayout> <!--đóng framelayout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:focusable="false">
            <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/tab_layout_main"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/main_tablayout_underline"
                app:tabSelectedTextColor="@color/main_tablayout_text_select"
                app:tabTextColor="@color/main_tablayout_text_noselect"
                app:tabPaddingTop="2dp"
                app:tabPaddingEnd="90dp"
                android:layout_gravity="left"
                app:tabTextAppearance="@style/MyCustomTextAppearance"
                app:tabMode="scrollable" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v4.view.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="255dp"
                    android:id="@+id/view_pager_main"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>